# prometheus-up-and-running

./: pyproject.toml
prometheus_demo/: main.py
