[tool.poetry]
name = "prometheus-demo"
version = "0.1.0"
description = ""
authors = ["jerson-uyekita-rompi <jerson.satoru@rompi.com.br>"]
readme = "README.md"
packages = [{include = "prometheus_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
prometheus-client = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
